--- a/site-recettes/ajoutrecette.html
+++ b/site-recettes/ajoutrecette.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -36,7 +36,7 @@
 				<label for="message">les ingrédients :</label>
 				<textarea id="message" name="message" required></textarea><br>
 				
-				<label for="message">Message :</label>
+				<label for="message">méthode de préparation :</label>
 				<textarea id="message" name="message" required></textarea><br>
 				
 				<button type="submit">Envoyer</button>
