--- a/site-recettes/site-recettes/accueil.html
+++ b/site-recettes/site-recettes/accueil.html
@@ -31,6 +31,10 @@
 		<input class="search-input" type="text" placeholder="Rechercher une recette...">
 		<button class="search-btn">Rechercher</button>
 	</div>
+  <div>
+    <label for="message">Informations:</label>
+				<textarea id="message" name="message" required></textarea><br>
+  </div>
 </main>
 
 
